codepkg/objects/ZPAPER6__zpaper__c.object
<CustomObject>
    <fields>
        <fullName>zChannel1__c</fullName>
        <description>incoming path and automation configuration</description>
        <inlineHelpText>{&apos;path&apos;:&apos;Orphan Rare Diseases/zCharta/16789489774&apos;,&apos;db-readers&apos;:&apos;:-20100.1:&apos;,&apos;db-users&apos;:&apos;:-20100.1:&apos;}</inlineHelpText>
        <label>zChannel1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zChannel2__c</fullName>
        <label>zChannel2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zChannel3__c</fullName>
        <label>zChannel3</label>
        <type>TextArea</type>
    </fields>
</CustomObject>